syntax = "proto3";

package sla2.v1;

option go_package = "github.com/liuzhen21/sla2/api/proto/v1;pb";

import "google/protobuf/timestamp.proto";

// WordService 提供单词学习相关的服务
service WordService {
  // GetWord 获取单词详情
  rpc GetWord(GetWordRequest) returns (GetWordResponse) {}
  // ListWords 获取单词列表
  rpc ListWords(ListWordsRequest) returns (ListWordsResponse) {}
  // UpdateLearningProgress 更新学习进度
  rpc UpdateLearningProgress(UpdateLearningProgressRequest) returns (UpdateLearningProgressResponse) {}
}

message Word {
  int64 id = 1;
  string spelling = 2;
  string pronunciation = 3;
  repeated string definitions = 4;
  repeated string examples = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetWordRequest {
  int64 word_id = 1;
}

message GetWordResponse {
  Word word = 1;
}

message ListWordsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListWordsResponse {
  repeated Word words = 1;
  int32 total = 2;
}

message LearningProgress {
  int64 user_id = 1;
  int64 word_id = 2;
  int32 familiarity = 3;
  google.protobuf.Timestamp next_review_at = 4;
  google.protobuf.Timestamp last_reviewed_at = 5;
}

message UpdateLearningProgressRequest {
  int64 user_id = 1;
  int64 word_id = 2;
  int32 familiarity = 3;
}

message UpdateLearningProgressResponse {
  LearningProgress progress = 1;
} 